--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "helmet": "^5.0.2",
     "openhim-mediator-utils": "^0.2.3"
   },
   "devDependencies": {
