--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 PORT=3000
 OPENHIM_USERNAME=smple@example.com
 OPENHIM_PASSWORD=abc123
-OPENHIM_API_URL=https://openhim-instace:9000
+OPENHIM_API_URL=https://openhim-instance:9000
