--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "openhim-mediator-utils": "^0.2.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.14",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.5.5"
   }
 }
