--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "dhis2-passthrough-mediator",
-  "version": "1.0.0",
-  "description": "Passthrough Mediator for Communicating with DHIS2",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start:dev": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Kuunika/dhis2-passthrough-mediator.git"
-  },
-  "keywords": [
-    "DHIS2 Mediator"
-  ],
-  "author": "Digital Health Division",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Kuunika/dhis2-passthrough-mediator/issues"
-  },
-  "homepage": "https://github.com/Kuunika/dhis2-passthrough-mediator#readme",
-  "dependencies": {
-    "axios": "^0.25.0",
-    "cors": "^2.8.5",
-    "dotenv": "^15.0.0",
-    "express": "^4.17.2",
-    "helmet": "^5.0.2",
-    "openhim-mediator-utils": "^0.2.3"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.14",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.5.5"
-  }
+	"name": "dhis2-passthrough-mediator",
+	"version": "1.0.0",
+	"description": "A Pass Through Mediator for Communicating with DHIS2",
+	"main": "./dist/index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node ./dist/index.js",
+		"start:dev": "nodemon ./dist/index.js",
+		"build": "rimraf dist && tsc",
+    "build:dev": "tsc --watch"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Kuunika/dhis2-passthrough-mediator.git"
+	},
+	"keywords": [
+		"DHIS2 Mediator"
+	],
+	"author": "Digital Health Division",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/Kuunika/dhis2-passthrough-mediator/issues"
+	},
+	"homepage": "https://github.com/Kuunika/dhis2-passthrough-mediator#readme",
+	"dependencies": {
+		"axios": "^0.25.0",
+		"cors": "^2.8.5",
+		"dotenv": "^15.0.0",
+		"express": "^4.17.2",
+		"helmet": "^5.0.2",
+		"openhim-mediator-utils": "^0.2.3",
+		"rimraf": "^3.0.2"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
+		"@types/node": "^17.0.14",
+		"nodemon": "^2.0.15",
+		"typescript": "^4.5.5"
+	}
 }
