--- a/src/config/mediatorConfig.json
+++ b/src/config/mediatorConfig.json
@@ -1,64 +1,64 @@
 {
-  "urn": "urn:mediator:dhis2_pass_through",
-  "version": "1.0.0",
-  "name": "DHIS2 Pass Though",
-  "description": "Pass Through Mediator for Communicating with DHIS2",
-  "defaultChannelConfig": [
-    {
-      "name": "DHIS2 Pass Though Mediator Endpoint",
-      "urlPattern": "^/dhis2$",
-      "routes": [
-        {
-          "name": "DHIS2 Pass Though Mediator Endpoint",
-          "host": "dhis2-pass-through-mediator",
-          "path": "/",
-          "port": "3000",
-          "primary": true,
-          "type": "http"
-        }
-      ],
-      "allow": ["dhis2"],
-      "methods": ["GET", "POST", "PUT"],
-      "type": "http"
-    }
-  ],
-  "endpoints": [
-    {
-      "name": "DHIS2 Pass Though Mediator Endpoint",
-      "host": "dhis2-pass-through-mediator",
-      "path": "/",
-      "port": "3000",
-      "primary": true,
-      "type": "http"
-    }
-  ],
-  "configDefs": [
-    {
-      "param": "DHIS2",
-      "displayName": "DHIS2 Configuration Variables",
-      "description": "",
-      "type": "struct",
-      "array": false,
-      "template": [
-        {
-          "param": "dhis2_url",
-          "displayName": "DHIS2 URL",
-          "description": "URL of the DHIS2 instance where traffic will be routed",
-          "type": "string"
-        },
-        {
-          "param": "dhis2_username",
-          "displayName": "Username",
-          "description": "Username of an authorised DHIS2 user within the targeted instance",
-          "type": "string"
-        },
-        {
-          "param": "dhis2_password",
-          "displayName": "Password",
-          "description": "DHIS2 users password",
-          "type": "password"
-        }
-      ]
-    }
-  ]
+	"urn": "urn:mediator:dhis2_pass_through",
+	"version": "1.0.0",
+	"name": "DHIS2 Pass Though",
+	"description": "Pass Through Mediator for Communicating with DHIS2",
+	"defaultChannelConfig": [
+		{
+			"name": "DHIS2 Pass Though Mediator Endpoint",
+			"urlPattern": "^/dhis2.*$",
+			"routes": [
+				{
+					"name": "DHIS2 Pass Though Mediator Endpoint",
+					"host": "dhis2-pass-through-mediator",
+					"path": "",
+					"port": "3000",
+					"primary": true,
+					"type": "http"
+				}
+			],
+			"allow": ["dhis2"],
+			"methods": ["GET", "POST", "PUT"],
+			"type": "http"
+		}
+	],
+	"endpoints": [
+		{
+			"name": "DHIS2 Pass Though Mediator Endpoint",
+			"host": "dhis2-pass-through-mediator",
+			"path": "",
+			"port": "3000",
+			"primary": true,
+			"type": "http"
+		}
+	],
+	"configDefs": [
+		{
+			"param": "DHIS2",
+			"displayName": "DHIS2 Configuration Variables",
+			"description": "",
+			"type": "struct",
+			"array": false,
+			"template": [
+				{
+					"param": "dhis2_url",
+					"displayName": "DHIS2 URL",
+					"description": "URL of the DHIS2 instance where traffic will be routed",
+					"type": "string"
+				},
+				{
+					"param": "dhis2_username",
+					"displayName": "Username",
+					"description": "Username of an authorised DHIS2 user within the targeted instance",
+					"type": "string"
+				},
+				{
+					"param": "dhis2_password",
+					"displayName": "Password",
+					"description": "DHIS2 users password",
+					"type": "password"
+				}
+			]
+		}
+	]
 }
