--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ networks:
 services:
   dhis2-pass-through-mediator:
     build: .
+    networks:
+      - openhim
     ports:
       - 3000:3000
     env_file:
