--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ networks:
 services:
   dhis2-pass-through-mediator:
     build: .
+    container_name: dhis2-pass-through-mediator
     networks:
       - openhim
     ports:
